--- a/web_client/template/ads.html
+++ b/web_client/template/ads.html
@@ -12,7 +12,7 @@
 <body>
 
       <section style="margin-left: auto; margin-right: auto;">
-        <div id="title-bg" style="--bg-img: url('/../assets/images/Historic Personal Computers Illustration (2).png') ">
+        <div id="title-bg" style="--bg-img: url('../../assets/images/HistoricPersonalComputersIllustration(2).png') ">
             <div class="title-content">
                 <p id="title">Advanced Data Structures</p>
                 <p id="stmt" style="color: #0AFF5C;"> Well-balanced Trees</p>
