--- a/web_client/template/ads2.html
+++ b/web_client/template/ads2.html
@@ -6,12 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ADS</title>
     <link rel="stylesheet" href="content.css">
-    <link rel="stylesheet" href="../utils.css">
+    <link rel="stylesheet" href="../../utils.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
     <section style="margin-left: auto; margin-right: auto;">
-        <div id="title-bg" style="--bg-img: url('/../assets/images/Historic Personal Computers Illustration (2).png') ">
+        <div id="title-bg" style="--bg-img: url('../../assets/images/HistoricPersonalComputersIllustration(2).png') ">
             <div class="title-content">
                 <p id="title">Advanced Data Structures</p>
                 <p id="stmt" style="color: #0AFF5C;"> Well-balanced Trees</p>
@@ -44,14 +44,14 @@
             
             <div class="grid-item">
                 <h2>Left-Left Rotation</h2>
-                <img src="\assets\data\DSAAT\ll.jpeg" alt="">
+                <img src="../../assets/data/DSAAT/ll.jpeg" alt="">
                 <p style="text-align: center;">Fig. Balancing a BST via LL rotation</p>
                 <p>If a tree becomes unbalanced, when a node is inserted into the left subtree of the left subtree, then we call it a
                     LL-imbalance , so let us call this rotation also as LL-rotation .</p>
             </div>
             <div class="grid-item">
                 <h2>Right-Right Rotation</h2>
-                <img src="\assets\data\DSAAT\rr.jpeg" alt="">
+                <img src="../../assets/data/DSAAT/rr.jpeg" alt="">
                 <p style="text-align: center;">Fig. Balancing a BST via RR rotation</p>
                 <p>If a tree becomes unbalanced, when a node is inserted into the right subtree of the right subtree, then we call it a
                     RR-imbalance , so let us call this rotation also as RR-rotation.</p>
@@ -59,21 +59,14 @@
             <div class="grid-item">
                 <h2>Left-Right Rotation</h2>
                 <p>A left-right rotation is a combination of left rotation followed by right rotation.</p>
-                <img src="\assets\data\DSAAT\lr.jpeg" alt="">
+                <img src="../../assets/data/DSAAT/lr.jpeg" alt="">
                 <p style="text-align: center;">Fig. Balancing a BST via LR rotation</p>
             </div>
             <div class="grid-item">
                 <h2>Right-Left Rotation</h2>
                 <p>The second type of double rotation is Right-Left Rotation. It is a combination of right rotation followed by left rotation.</p>
-                <img src="\assets\data\DSAAT\rl.jpeg" alt="">
+                <img src="../../assets/data/DSAAT/rl.jpeg" alt="">
                 <p style="text-align: center;">Fig. Balancing a BST via RL rotation</p>
-            </div>
-
-            <div class="grid-item">
-                
-            </div>
-            <div class="grid-item">
-            
             </div>
             
           </div> 
