--- a/web_client/template/ads.html
+++ b/web_client/template/ads.html
@@ -1,9 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href=".\content.css">
     <link rel="stylesheet" href="..\..\utils.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -173,6 +170,6 @@
         </div>
         </div>
     </footer>
-      <script src="..\..\main.js"></script>
+      <script src="../../main.js"></script>
 </body>
 </html>
