--- a/web_client/template/ads2.html
+++ b/web_client/template/ads2.html
@@ -1,9 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ADS</title>
     <link rel="stylesheet" href="content.css">
     <link rel="stylesheet" href="../../utils.css">
@@ -105,6 +102,6 @@
         </div>
         </div>
     </footer>
-      <script src="../main.js"></script>
+      <script src="../../main.js"></script>
 </body>
 </html>
