--- a/web_client/template/ads.html
+++ b/web_client/template/ads.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href=".\content.css">
     <link rel="stylesheet" href="..\..\utils.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <title>ADS</title>
+    <title>ADS-1</title>
 </head>
 <body>
 
@@ -139,15 +139,15 @@
       </section>
       
       <div class="container">
-        <p style=""><b><i>Now we are  ready to understand the concept of AVL trees.</i></b></p>
-        <ul class="pagination">
-          <li class="icon">
+        <p><b><i>THANK YOU</i></b></p>
+        <ul class="pagination" id="list">
+          <li id="prev" class="icon" onclick="Previous()">
             <a href="#"><span class="fa fa-angle-left"></span>Previous</a>
           </li>
-          <li><a href="ads.html">1</a></li>
-          <li><a href="ads2.html">2</a></li>
-          <li><a href="ads3.html">3</a></li>
-          <li class="icon">
+          <li><a href="ads.html" id="1">1</a></li>
+          <li><a href="ads2.html" id="2">2</a></li>
+          <li><a href="ads3.html" id="3">3</a></li>
+          <li id="nxt" class="icon" onclick="Next()">
             <a href="#">Next<span class="fa fa-angle-right"></span></a>
           </li>
         </ul>
