--- a/web_client/template/ads2.html
+++ b/web_client/template/ads2.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>ADS</title>
+    <title>ADS-2</title>
     <link rel="stylesheet" href="content.css">
     <link rel="stylesheet" href="../../utils.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -70,16 +70,16 @@
       </section>
 
 
-    <div class="container">
-        <p style=""><b><i>Excited to Know How to create AVL Tree?</i></b></p>
-        <ul class="pagination">
-          <li class="icon">
+      <div class="container">
+        <p><b><i>THANK YOU</i></b></p>
+        <ul class="pagination" id="list">
+          <li id="prev" class="icon" onclick="Previous()">
             <a href="#"><span class="fa fa-angle-left"></span>Previous</a>
           </li>
-          <li><a href="ads.html">1</a></li>
-          <li><a href="ads2.html">2</a></li>
-          <li><a href="ads3.html">3</a></li>
-          <li class="icon">
+          <li><a href="ads.html" id="1">1</a></li>
+          <li><a href="ads2.html" id="2">2</a></li>
+          <li><a href="ads3.html" id="3">3</a></li>
+          <li id="nxt" class="icon" onclick="Next()">
             <a href="#">Next<span class="fa fa-angle-right"></span></a>
           </li>
         </ul>
